--- a/package.json
+++ b/package.json
@@ -18,6 +18,13 @@
     "grunt-open": "~0.2.0",
     "karma": "~0.8.6",
     "grunt-karma": "~0.4.4",
-    "connect-livereload": "~0.2.0"
+    "connect-livereload": "~0.2.0",
+    "ar-drone": "~0.1.0",
+    "nodemon": "~0.7.10"
+  },
+  "dependencies": {
+    "sockjs": "~0.3.7",
+    "johnny-five": "~0.7.2",
+    "node-static": "~0.7.0"
   }
 }
