--- a/bower.json
+++ b/bower.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "bootstrap": "https://github.com/twbs/bootstrap/archive/3.0.0-wip.zip",
     "jquery": "~1.10.x",
-    "sockjs": "~0.3.4"
+    "sockjs": "~0.3.4",
+    "raphael": "~2.1.1"
   }
 }
